@@ -37,6 +37,7 @@
 (require 'url-cache)
 (require 'xml)
 (require 'browse-url)
+(require 'help-fns)
 
 (defcustom gnus-html-image-cache-ttl (days-to-time 7)
   "Time used to determine if we should use images from the cache."
@@ -368,10 +369,12 @@ Use ALT-TEXT for the image string."
   "Retrieve IMAGE, and place it into BUFFER on arrival."
   (gnus-message 8 "gnus-html-schedule-image-fetching: buffer %s, image %s"
                 buffer image)
-  (ignore-errors
-    (url-retrieve (car image)
-                  'gnus-html-image-fetched
-                  (list buffer image))))
+  (let ((args (list (car image)
+		    'gnus-html-image-fetched
+		    (list buffer image))))
+    (when (> (length (help-function-arglist 'url-retrieve)) 4)
+      (setq args (nconc args (list t))))
+    (apply #'url-retrieve args)))
 
 (defun gnus-html-image-fetched (status buffer image)
   "Callback function called when image has been fetched."
